Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17612

[SHELL32] ShellExecCmdLine(), RunDlg does not accept calling a batch file without extension

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Shell
    • None

    Description

      Reproduction steps

      • Create a hello.bat file in C:\ReactOS (which is in path)
      • only content of that batch file should be "pause"
      • open the RunDlg from start menu and write just "hello" without the extension

      Expected result
      we checked on 2k3sp2: the .bat file gets started

      Observed result
      on ros 0.4.15-dev-2620-g5ce9e2e the command "hello" will lead to a messagebox: "file not found"
      contrary when entering "hello.bat" in the RunDlg, the script does run as expected

      Attachments

        1. CORE-17612_Fail.png
          CORE-17612_Fail.png
          66 kB
        2. CORE-17612_OK.png
          CORE-17612_OK.png
          72 kB
        3. shlexec_cpp_01.patch
          3 kB
        4. shlexec_cpp_02.patch
          3 kB

        Issue Links

          Activity

            People

              zecarlos1957 zecarlos1957
              reactosfanboy reactosfanboy
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: